# autogamen

./: .gitignore  Makefile  battle.py  bench_vector.py  claude.md  pyproject.toml  requirements.txt  run_gnubg.py  run_headless_game.py  run_neuro_evolution.py  run_reinforcement_learning.py  run_ui_game.py  run_ui_match.py  test.py  test_gnubg.py  test_gnubg_game.py  test_gnubg_simple.py
autogamen/: __main__.py  cli.py
autogamen/ai/: bozo.py  mlp.py  neuro_evolution_net.py  players.py  simple.py
autogamen/game/: board.py  game.py  game_types.py  headless.py  match.py  neuro_evolution.py  player.py  reinforcement_learning.py  types.py  ui_match.py  vector_game.py
autogamen/gnubg/: README.md  __init__.py  interface.py
autogamen/ui/: board_view.py  game_view.py  match_view.py  types.py  ui_player.py  ui_types.py
test/: performance.py  test_board.py  test_gnubg_integration.md  test_gnubg_integration.py  test_pypibg_integration.py  test_vector_game.py
